# GEOMETRIC_GAZE_ESTIMATION

./: .gitignore  PROJECT_ARCHITECTURE.md  README_VN.md  RUN_FAST.bat  RUN_FAST.sh  config.py  gaze_estimation.py  requirements.txt  requirements_rpi.txt  run_live.bat  setup_pc.bat  setup_rpi.sh  task.md
backup_logic/: gaze_logic_backup.py
c++_version/: CMakeLists.txt  export_models.py  extract_mesh_478.py  mesh_helper.py  setup_env.bat
c++_version/src/: main.cpp
data/face/: image copy 2.json  image copy 3.json  image copy.json  image.json
data/geometric/: image copy 2.json  image copy 3.json  image copy.json  image.json
data/geometric_video/: test_video.json
data/head/: image copy 2.json  image copy 3.json  image copy.json
face_landmark/: README.md  batch_landmark.py  face_parts.py  landmark_detect.py  landmark_model.py  run.bat  run_batch.bat  show_crops.py  visualize_3d.py
gaze_estimation/: test.py
output/visualization_html/: 3d_log_close_eye.txt  3d_log_hoamnbucu.txt  3d_log_image copy 2.txt  3d_log_image copy 3.txt  3d_log_image copy 6.txt  3d_log_image copy 7.txt  3d_log_image copy.txt  3d_log_image.txt  3d_log_lowqua_eye_close.txt
yolov8_head/: batch_detect.py  head_detect.py  model_manager.py  run.bat
